--- a/resources/scss/pages-parts/_header.scss
+++ b/resources/scss/pages-parts/_header.scss
@@ -7,6 +7,15 @@ $header-bg-color: #685757;
     display: flex;    
     justify-content: space-between;
     align-items: center;
+
+    a {
+        color: #fff;
+        
+        &:hover {
+            color: #685757;
+        }
+    }
+
     .logo-link {
         display: block;
         width: fit-content;
