--- a/resources/scss/base/_base-styles.scss
+++ b/resources/scss/base/_base-styles.scss
@@ -12,3 +12,16 @@ body {
     background-color: $body-bg-color;
     color: $body-text-color;
 }
+
+.loading-spinner {
+  width: 20px;
+  height: 20px;
+  border: 3px solid rgba(255,255,255,0.3);
+  border-top-color: white;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin { 
+  100% { transform: rotate(360deg); }
+}
