Implement FlashCardsList component and enhance CreateFlashCard functionality; update validation rules, modify FlashCard model, and improve UI for better user experience.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,3 +5,4 @@
 @use 'pages-parts/header';
 @use 'pages-parts/footer';
 @use 'pages-parts/form-input-container';
+@use 'pages-parts/flash-cards-panel';
