Add translations and UI updates for flashcards: enhance language files with new keys, update flashcard component for better user interaction, and improve styling for forms and containers.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,4 +5,5 @@
 @use 'pages-parts/header';
 @use 'pages-parts/footer';
 @use 'pages-parts/form-input-container';
-@use 'pages-parts/flash-cards-panel';
+@use 'pages-parts/flash-cards';
+@use 'pages-parts/one-form-pages';
