--- a/resources/scss/pages-parts/_header.scss
+++ b/resources/scss/pages-parts/_header.scss
@@ -1,19 +1,20 @@
-$header-bg-color: #685757;
+$header-bg-color: #ffffff;
+$links-color: #000000;
+$links-hover-color: #303030;
 
 .header {
     background-color: $header-bg-color;
-    height: 80px;
-    padding: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-top: 5px;
     display: flex;    
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 50px;
+    box-shadow: 0px -6px 10px 0px black;
 
     a {
-        color: #fff;
-        
-        &:hover {
-            color: #685757;
-        }
+        color: $links-color;
     }
 
     .logo-link {
@@ -21,8 +22,8 @@ $header-bg-color: #685757;
         width: fit-content;
         height: 100%;
         &__image {
-            width: 100%;
-            height: 100%;
+            width: 80px;
+            height: 80px;
         }
     }
 
@@ -30,7 +31,29 @@ $header-bg-color: #685757;
         display: flex;
         gap: 15px;
         &__link {
+            text-align: center;
+            display: block;
+            padding: 10px;
+            color: white;
+            background-color: #3e3e3f;
+            border-radius: 10px;
 
+            &:hover {
+                box-shadow: 0 0 6px 0px black;
+            }
+        }
+    }
+}
+
+@media (max-width:426px) {
+    .header {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 12px;
+        .header-nav-bar-links-container {
+            &__link {
+                padding: 6px;
+            }
         }
     }
 }
